css/style.css
/* ==========
    RESETS
   ========== */

* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    font-size: 1em;
}

img {
    display: block;
    width: 100%;
}
li {
    list-style-type: none;
}

/* ==========
    SPACING
   ========== */
.mb-1 {
    margin-bottom: 0.5em;
}
.mb-2 {
    margin-bottom: 1em;
}
.mb-3 {
    margin-bottom: 1.5em;
}
.mb-4 {
    margin-bottom: 2em;
}
.m-auto {
    margin: auto;
}

/* ==========
    TYPOGRAPHY
   ========== */
.h1 {
    font-size: 2.4em;
}
.h2 {
    font-size: 1.6em;
}
.small {
    font-size: 0.8em;
}
.text-center {
    text-align: center;
}

/* ==========
    COLORS
   ========== */
.c-1 {
    color: white;
}
.c-2 {
   color: #17b473;
}

.bg-c-1 {
    background-color: #4d5b67;
}
.bg-c-2 {
    background-color: #17b473;
}
/* ==========
    POSITIONING
   ========== */
.abs {
    position: absolute;
}
.rel {
    position: relative;
}
.fix {
    position: fixed;
}
/* ==========
    DISPLAY
   ========== */
.d-none {
    display: none;
}
.d-flex {
    display: flex;
}
.d-block {
    display: block;
}
/* ==========
    FLEXERS
   ========== */
.d-flex.col {
    flex-direction: column;
}
.d-flex.center {
    justify-content: center;
}
.d-flex.center-cross {
    align-items: center;
}
/* ==========
    ANCORA SPARSE
   ========== */

body {
    background-color: #1d2226;
    color: white;
    font-family: sans-serif;
}

.action-button {
    color: white;
    background-color: #1d2226;
    flex-direction: column;
    align-items: center;
    padding: 0.5em;
    border-radius: 10px;
}
.big-btn {
    padding: .5em;
    font-weight: bold;
    font-size: 1.1em;
}
.frame {
    border: 1px solid black;
    overflow: hidden;
    border-radius: 50%;
}

canvas {
    border: 1px solid white;
    margin-left: 50%;
    transform: translateX(-50%);
}
.round {
    border-radius: 50%;
}
.layover {
    top: 0;
    left: 0;
    background-color: rgba(255, 255, 255, 0.4);
    width: 100%;
    height: 100%;
    cursor: crosshair;
}
.layover-banner {
    user-select: none;
    background-color: rgba(0, 0, 0, 0.5);
    padding: 0.4em;
    width: max-content;
    color: white;
    border-radius: 5px;
}
.tools {
    background-color: #4d5b67;
    padding: .5em;
}
.tool {
    display: block;
    margin-right: 2em;
    /* TOTEST */
    width: 25%;
}
.tool-tot {
    top: 0;
    right: 0;
}
.created {
    padding: 10px;
    background: white;
    z-index: 100;
    right: 10px;
    bottom: 10px;
    border-radius: 0.25em;
    background-color: rgb(94, 96, 97);
    color: whitesmoke;
}
 .fa-heart {
    color: red;
 }
input[type=range] {
    -webkit-appearance: none; /* Hides the slider so that custom slider can be made */
    width: 100%; /* Specific width is required for Firefox. */
    background: transparent; /* Otherwise white in Chrome */
  }
  
  input[type=range]::-webkit-slider-thumb {
    -webkit-appearance: none;
  }
  
  input[type=range]:focus {
    outline: none; /* Removes the blue border. You should probably do some kind of focus styling for accessibility reasons though. */
  }
  
  input[type=range]::-ms-track {
    width: 100%;
    cursor: pointer;
  
    /* Hides the slider so custom styles can be added */
    background: transparent; 
    border-color: transparent;
    color: transparent;
  }


/* Special styling for WebKit/Blink */
input[type=range]::-webkit-slider-thumb {
    -webkit-appearance: none;
    border: 1px solid #000000;
    height: 16px;
    width: 16px;
    margin-top: -8px;
    border-radius: 3px;
    background: #ffffff;
    cursor: pointer;
    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d; /* Add cool effects to your sliders! */
  }
  
  /* All the same stuff for Firefox */
  input[type=range]::-moz-range-thumb {
    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
    border: 1px solid #000000;
    height: 16px;
    width: 16px;
    margin-top: -8px;
    border-radius: 3px;
    background: #ffffff;
    cursor: pointer;
  }
  
  /* All the same stuff for IE */
  input[type=range]::-ms-thumb {
    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
    border: 1px solid #000000;
    height: 16px;
    width: 16px;
    margin-top: -8px;
    border-radius: 3px;
    background: #ffffff;
    cursor: pointer;
  }

  input[type=range]::-webkit-slider-runnable-track {
    width: 100%;
    height: 8.4px;
    cursor: pointer;
    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
    background: #30a977;
    border-radius: 1.3px;
    border: 0.2px solid #010101;
  }
  
  input[type=range]:focus::-webkit-slider-runnable-track {
    background: #17b473;
  }
  
  input[type=range]::-moz-range-track {
    width: 100%;
    height: 8.4px;
    cursor: pointer;
    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
    background: #30a977;
    border-radius: 1.3px;
    border: 0.2px solid #010101;
  }
  
  input[type=range]::-ms-track {
    width: 100%;
    height: 8.4px;
    cursor: pointer;
    background: transparent;
    border-color: transparent;
    border-width: 16px 0;
    color: transparent;
  }
  input[type=range]::-ms-fill-lower {
    background: #17b473;
    border: 0.2px solid #010101;
    border-radius: 2.6px;
    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
  }
  input[type=range]:focus::-ms-fill-lower {
    background: #30a977;
  }
  input[type=range]::-ms-fill-upper {
    background: #30a977;
    border: 0.2px solid #010101;
    border-radius: 2.6px;
    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
  }
  input[type=range]:focus::-ms-fill-upper {
    background: #30a977;
  }

